IaC/2.Terraform/K8s/lessons/147/rust-app/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rust-app
  namespace: staging
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 443
      targetPort: 50050
  selector:
    app: rust-app
