IaC/2.Terraform/K8s/lessons/147/rust-app/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: rust-app
  namespace: staging
spec:
  ingressClassName: internal-ingress-nginx
  rules:
    - host: api.rust.antonputra.pvt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rust-app
                port:
                  number: 443
  tls:
    - secretName: api-rust-antonputra-pvt
      hosts:
        - api.rust.antonputra.pvt
